// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patches link to media fields > existing > group 1`] = `
{
  "group": [
    {
      "field": {
        "height": "1",
        "id": "id-existing",
        "kind": "image",
        "link_type": "Media",
        "name": "default.jpg",
        "size": "1",
        "url": "https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?w=2560&h=1440&fit=crop",
        "width": "1",
      },
    },
  ],
}
`;

exports[`patches link to media fields > existing > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "id-existing",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "id-existing",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
          "width": "1",
        },
        "group": [
          {
            "field": {
              "height": "1",
              "id": "id-existing",
              "kind": "image",
              "link_type": "Media",
              "name": "default.jpg",
              "size": "1",
              "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
              "width": "1",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link to media fields > existing > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "id-existing",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "id-existing",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          "width": "1",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link to media fields > existing > static zone 1`] = `
{
  "field": {
    "height": "1",
    "id": "id-existing",
    "kind": "image",
    "link_type": "Media",
    "name": "default.jpg",
    "size": "1",
    "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
    "width": "1",
  },
}
`;

exports[`patches link to media fields > existingNonImage > group 1`] = `
{
  "group": [
    {
      "field": {
        "id": "id-existing",
        "kind": "document",
        "link_type": "Media",
        "name": "foo.pdf",
        "size": "1",
        "url": "https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?w=2560&h=1440&fit=crop",
      },
    },
  ],
}
`;

exports[`patches link to media fields > existingNonImage > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "kind": "document",
            "link_type": "Media",
            "name": "foo.pdf",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "kind": "document",
          "link_type": "Media",
          "name": "foo.pdf",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
        },
        "group": [
          {
            "field": {
              "id": "id-existing",
              "kind": "document",
              "link_type": "Media",
              "name": "foo.pdf",
              "size": "1",
              "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link to media fields > existingNonImage > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "id": "id-existing",
            "kind": "document",
            "link_type": "Media",
            "name": "foo.pdf",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          },
        },
      ],
      "primary": {
        "field": {
          "id": "id-existing",
          "kind": "document",
          "link_type": "Media",
          "name": "foo.pdf",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link to media fields > existingNonImage > static zone 1`] = `
{
  "field": {
    "id": "id-existing",
    "kind": "document",
    "link_type": "Media",
    "name": "foo.pdf",
    "size": "1",
    "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
  },
}
`;

exports[`patches link to media fields > new > group 1`] = `
{
  "group": [
    {
      "field": {
        "height": "1",
        "id": "ef95d5daa4d",
        "kind": "image",
        "link_type": "Media",
        "name": "default.jpg",
        "size": "1",
        "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=2560&h=1705&fit=crop",
        "width": "1",
      },
    },
  ],
}
`;

exports[`patches link to media fields > new > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "f2c3f8bfc90",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "f2c3f8bfc90",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
          "width": "1",
        },
        "group": [
          {
            "field": {
              "height": "1",
              "id": "f2c3f8bfc90",
              "kind": "image",
              "link_type": "Media",
              "name": "default.jpg",
              "size": "1",
              "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
              "width": "1",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link to media fields > new > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "45306297c5e",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "45306297c5e",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
          "width": "1",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link to media fields > new > static zone 1`] = `
{
  "field": {
    "height": "1",
    "id": "c5c95f8d3ac",
    "kind": "image",
    "link_type": "Media",
    "name": "default.jpg",
    "size": "1",
    "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
    "width": "1",
  },
}
`;

exports[`patches link to media fields > otherRepository > group 1`] = `
{
  "group": [
    {
      "field": {
        "height": "1",
        "id": "fdb33894dcf",
        "kind": "image",
        "link_type": "Media",
        "name": "default.jpg",
        "size": "1",
        "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
        "width": "1",
      },
    },
  ],
}
`;

exports[`patches link to media fields > otherRepository > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "ba97bfb16bf",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "ba97bfb16bf",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
          "width": "1",
        },
        "group": [
          {
            "field": {
              "height": "1",
              "id": "ba97bfb16bf",
              "kind": "image",
              "link_type": "Media",
              "name": "default.jpg",
              "size": "1",
              "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
              "width": "1",
            },
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link to media fields > otherRepository > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": {
            "height": "1",
            "id": "a57963dc361",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
            "width": "1",
          },
        },
      ],
      "primary": {
        "field": {
          "height": "1",
          "id": "a57963dc361",
          "kind": "image",
          "link_type": "Media",
          "name": "default.jpg",
          "size": "1",
          "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
          "width": "1",
        },
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link to media fields > otherRepository > static zone 1`] = `
{
  "field": {
    "height": "1",
    "id": "97acc6e9abf",
    "kind": "image",
    "link_type": "Media",
    "name": "default.jpg",
    "size": "1",
    "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
    "width": "1",
  },
}
`;

exports[`patches link to media fields > richTextExisting > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [
            {
              "end": 5,
              "start": 0,
              "type": "strong",
            },
            {
              "data": {
                "height": "1",
                "id": "id-existing",
                "kind": "image",
                "link_type": "Media",
                "name": "default.jpg",
                "size": "1",
                "url": "https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?w=2560&h=1440&fit=crop",
                "width": "1",
              },
              "end": 5,
              "start": 0,
              "type": "hyperlink",
            },
          ],
          "text": "lorem",
          "type": "paragraph",
        },
      ],
    },
  ],
}
`;

exports[`patches link to media fields > richTextExisting > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "id-existing",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "id-existing",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [
                  {
                    "end": 5,
                    "start": 0,
                    "type": "strong",
                  },
                  {
                    "data": {
                      "height": "1",
                      "id": "id-existing",
                      "kind": "image",
                      "link_type": "Media",
                      "name": "default.jpg",
                      "size": "1",
                      "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
                      "width": "1",
                    },
                    "end": 5,
                    "start": 0,
                    "type": "hyperlink",
                  },
                ],
                "text": "lorem",
                "type": "paragraph",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link to media fields > richTextExisting > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "id-existing",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "id-existing",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link to media fields > richTextExisting > static zone 1`] = `
{
  "field": [
    {
      "spans": [
        {
          "end": 5,
          "start": 0,
          "type": "strong",
        },
        {
          "data": {
            "height": "1",
            "id": "id-existing",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
            "width": "1",
          },
          "end": 5,
          "start": 0,
          "type": "hyperlink",
        },
      ],
      "text": "lorem",
      "type": "paragraph",
    },
  ],
}
`;

exports[`patches link to media fields > richTextNew > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [
            {
              "end": 5,
              "start": 0,
              "type": "strong",
            },
            {
              "data": {
                "height": "1",
                "id": "ef95d5daa4d",
                "kind": "image",
                "link_type": "Media",
                "name": "default.jpg",
                "size": "1",
                "url": "https://images.unsplash.com/photo-1441974231531-c6227db76b6e?w=2560&h=1705&fit=crop",
                "width": "1",
              },
              "end": 5,
              "start": 0,
              "type": "hyperlink",
            },
          ],
          "text": "lorem",
          "type": "paragraph",
        },
      ],
    },
  ],
}
`;

exports[`patches link to media fields > richTextNew > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "f2c3f8bfc90",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "f2c3f8bfc90",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [
                  {
                    "end": 5,
                    "start": 0,
                    "type": "strong",
                  },
                  {
                    "data": {
                      "height": "1",
                      "id": "f2c3f8bfc90",
                      "kind": "image",
                      "link_type": "Media",
                      "name": "default.jpg",
                      "size": "1",
                      "url": "https://images.unsplash.com/photo-1604537529428-15bcbeecfe4d?w=4240&h=2832&fit=crop",
                      "width": "1",
                    },
                    "end": 5,
                    "start": 0,
                    "type": "hyperlink",
                  },
                ],
                "text": "lorem",
                "type": "paragraph",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link to media fields > richTextNew > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "45306297c5e",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "45306297c5e",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link to media fields > richTextNew > static zone 1`] = `
{
  "field": [
    {
      "spans": [
        {
          "end": 5,
          "start": 0,
          "type": "strong",
        },
        {
          "data": {
            "height": "1",
            "id": "c5c95f8d3ac",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1604537466608-109fa2f16c3b?w=4240&h=2832&fit=crop",
            "width": "1",
          },
          "end": 5,
          "start": 0,
          "type": "hyperlink",
        },
      ],
      "text": "lorem",
      "type": "paragraph",
    },
  ],
}
`;

exports[`patches link to media fields > richTextOtherRepository > group 1`] = `
{
  "group": [
    {
      "field": [
        {
          "spans": [
            {
              "end": 5,
              "start": 0,
              "type": "strong",
            },
            {
              "data": {
                "height": "1",
                "id": "fdb33894dcf",
                "kind": "image",
                "link_type": "Media",
                "name": "default.jpg",
                "size": "1",
                "url": "https://images.unsplash.com/photo-1470770903676-69b98201ea1c?w=4554&h=3036&fit=crop",
                "width": "1",
              },
              "end": 5,
              "start": 0,
              "type": "hyperlink",
            },
          ],
          "text": "lorem",
          "type": "paragraph",
        },
      ],
    },
  ],
}
`;

exports[`patches link to media fields > richTextOtherRepository > shared slice 1`] = `
{
  "slices": [
    {
      "id": "2ff58c741ba",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "ba97bfb16bf",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "ba97bfb16bf",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
        "group": [
          {
            "field": [
              {
                "spans": [
                  {
                    "end": 5,
                    "start": 0,
                    "type": "strong",
                  },
                  {
                    "data": {
                      "height": "1",
                      "id": "ba97bfb16bf",
                      "kind": "image",
                      "link_type": "Media",
                      "name": "default.jpg",
                      "size": "1",
                      "url": "https://images.unsplash.com/reserve/HgZuGu3gSD6db21T3lxm_San%20Zenone.jpg?w=6373&h=4253&fit=crop",
                      "width": "1",
                    },
                    "end": 5,
                    "start": 0,
                    "type": "hyperlink",
                  },
                ],
                "text": "lorem",
                "type": "paragraph",
              },
            ],
          },
        ],
      },
      "slice_label": null,
      "slice_type": "at",
      "variation": "tortor",
      "version": "a79b9dd",
    },
  ],
}
`;

exports[`patches link to media fields > richTextOtherRepository > slice 1`] = `
{
  "slices": [
    {
      "id": "e93cc3e4f28",
      "items": [
        {
          "field": [
            {
              "spans": [
                {
                  "end": 5,
                  "start": 0,
                  "type": "strong",
                },
                {
                  "data": {
                    "height": "1",
                    "id": "a57963dc361",
                    "kind": "image",
                    "link_type": "Media",
                    "name": "default.jpg",
                    "size": "1",
                    "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
                    "width": "1",
                  },
                  "end": 5,
                  "start": 0,
                  "type": "hyperlink",
                },
              ],
              "text": "lorem",
              "type": "paragraph",
            },
          ],
        },
      ],
      "primary": {
        "field": [
          {
            "spans": [
              {
                "end": 5,
                "start": 0,
                "type": "strong",
              },
              {
                "data": {
                  "height": "1",
                  "id": "a57963dc361",
                  "kind": "image",
                  "link_type": "Media",
                  "name": "default.jpg",
                  "size": "1",
                  "url": "https://images.unsplash.com/photo-1426604966848-d7adac402bff?w=5616&h=3744&fit=crop",
                  "width": "1",
                },
                "end": 5,
                "start": 0,
                "type": "hyperlink",
              },
            ],
            "text": "lorem",
            "type": "paragraph",
          },
        ],
      },
      "slice_label": "Pellentesque",
      "slice_type": "nulla_posuere",
    },
  ],
}
`;

exports[`patches link to media fields > richTextOtherRepository > static zone 1`] = `
{
  "field": [
    {
      "spans": [
        {
          "end": 5,
          "start": 0,
          "type": "strong",
        },
        {
          "data": {
            "height": "1",
            "id": "97acc6e9abf",
            "kind": "image",
            "link_type": "Media",
            "name": "default.jpg",
            "size": "1",
            "url": "https://images.unsplash.com/photo-1553531384-397c80973a0b?w=4335&h=6502&fit=crop",
            "width": "1",
          },
          "end": 5,
          "start": 0,
          "type": "hyperlink",
        },
      ],
      "text": "lorem",
      "type": "paragraph",
    },
  ],
}
`;
